[package]

name = "wren"
version = "0.1.2"
authors = ["Paul Woolcock <paul@woolcock.us>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pwoolcoc/wren-rs"
homepage = "https://github.com/pwoolcoc/wren-rs"
description = "Embed the Wren programming language in your Rust program"

[dependencies]
wren-sys = "*"
libc = "*"
